--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "prism-themes": "^1.7.0",
     "prismjs": "^1.23.0",
     "qs": "6.10.3",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^2.1.0",
     "react-copy-to-clipboard": "^5.0.3",
@@ -147,7 +147,6 @@
     "rtlcss-webpack-plugin": "^4.0.6",
     "sass": "1.32.1",
     "socicon": "^3.0.5",
-    "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
@@ -165,16 +164,16 @@
     "@types/prismjs": "1.16.5",
     "@types/qs": "6.9.7",
     "@types/react": "^18.0.4",
-    "@types/react-copy-to-clipboard": "5.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-table": "^7.7.9",
+    "@types/react-copy-to-clipboard": "^5.0.2",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-table": "^7.7.12",
     "cross-env": "^7.0.3",
     "electron": "^19.0.6",
     "electron-builder": "^23.1.0",
     "electron-rebuild": "^2.3.5",
     "prettier": "2.5.1",
     "react-query-devtools": "2.6.3",
-    "typescript": "^4.1.2",
+    "typescript": "^4.7.4",
     "v": "^0.3.0",
     "webpack-cli": "^4.8.0"
   },
